--- a/overlay/frameworks/base/core/res/res/values/arrow_config.xml
+++ b/overlay/frameworks/base/core/res/res/values/arrow_config.xml
@@ -69,4 +69,6 @@
       <!-- Do the battery/notification LEDs support pulsing?
          Used to decide if we show pulse settings -->
     <bool name="config_ledCanPulse">true</bool>
+	<!-- Whether to cleanup fingerprints upon connection to the daemon and when user switches -->
+    <bool name="config_cleanupUnusedFingerprints">false</bool>																							 													  
 </resources>
