--- a/overlay/packages/apps/Settings/res/values/config.xml
+++ b/overlay/packages/apps/Settings/res/values/config.xml
@@ -17,4 +17,11 @@
 <resources>
     <!-- Whether to add AGPS parameter settings -->
     <bool name="config_agps_enabled">true</bool>
+	<!-- Defines the location of the fingerprint sensor on the device
+         0 = back
+         1 = front
+         2 = left side
+         3 = right side
+    -->
+    <integer name="config_fingerprintSensorLocation">0</integer>
 </resources>
