--- a/overlay/frameworks/base/core/res/res/values/arrow_config.xml
+++ b/overlay/frameworks/base/core/res/res/values/arrow_config.xml
@@ -45,6 +45,7 @@
 
     <bool name="config_button_brightness_support">false</bool>
     <integer name="config_button_brightness_default">0</integer>
+	<integer name="config_buttonBrightnessSettingDefault">0</integer>																 
 
     <!-- Hardware keys present on the device with the ability to wake, stored as a bit field.
          This integer should equal the sum of the corresponding value for each
