--- a/XiaomiParts/res/xml/main.xml
+++ b/XiaomiParts/res/xml/main.xml
@@ -5,7 +5,7 @@
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
 
-          http://www.apache.org/licenses/LICENSE-2.0
+          http://www.apache.com/licenses/LICENSE-2.0
 
      Unless required by applicable law or agreed to in writing, software
      distributed under the License is distributed on an "AS IS" BASIS,
@@ -15,21 +15,26 @@
 -->
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <PreferenceCategory
-        android:title="@string/category_vibrator">
-        <com.markw.settings.device.VibratorStrengthPreference
-            android:key="vib_strength"
-            android:title="@string/vib_strength_title_head"
-            android:summary="@string/vib_strength_summary_head" />
+        android:title="@string/graphics_title">
+        <PreferenceScreen
+            android:key="kcal"
+            android:fragment="com.lineageos.settings.device.DisplayCalibration"
+            android:summary="@string/kcal_summary"
+            android:title="@string/kcal_title" />
     </PreferenceCategory>
+
     <PreferenceCategory
-        android:title="@string/category_torch">
-        <com.markw.settings.device.YellowTorchBrightnessPreference
-            android:key="yellow_torch_brightness"
-            android:title="@string/yellow_torch_brightness_title_head"
-            android:summary="@string/yellow_torch_brightness_summary_head" />
-        <com.markw.settings.device.WhiteTorchBrightnessPreference
-            android:key="white_torch_brightness"
-            android:title="@string/white_torch_brightness_title_head"
-            android:summary="@string/white_torch_brightness_summary_head" />
+        android:title="@string/category_vibrator">
+        <com.lineageos.settings.device.VibratorStrengthPreference
+            android:key="vib_strength"
+            android:title="@string/vib_strength_title_head" />
     </PreferenceCategory>
+
+    <PreferenceCategory
+        android:title="@string/battery_charging_limiter_title">
+        <com.lineageos.settings.device.BatteryChargingLimiterPreference
+            android:key="battery_charging_limiter"
+            android:title="@string/battery_charging_limiter_desc" />
+    </PreferenceCategory>
+
 </PreferenceScreen>
