--- a/overlay/frameworks/base/core/res/res/values/aosip_config.xml
+++ b/overlay/frameworks/base/core/res/res/values/aosip_config.xml
@@ -29,9 +29,37 @@
     Set to -1 to disable the proximity sensor check at all-->
     <integer name="config_flashlightProximityTimeout">-1</integer>
 
+    <!-- Hardware keys present on the device, stored as a bit field.
+         This integer should equal the sum of the corresponding value for each
+         of the following keys present:
+             1 - Home
+             2 - Back
+             4 - Menu
+             8 - Assistant (search)
+            16 - App switch
+            32 - Camera
+            64 - Volume rocker
+         For example, a device with Home, Back and Menu keys would set this
+         config to 7. -->
+    <integer name="config_deviceHardwareKeys">71</integer>
+
     <bool name="config_button_brightness_support">false</bool>
     <integer name="config_button_brightness_default">0</integer>
-      <integer name="config_buttonBrightnessSettingDefault">0</integer>																 
+	<integer name="config_buttonBrightnessSettingDefault">0</integer>																 
+
+    <!-- Hardware keys present on the device with the ability to wake, stored as a bit field.
+         This integer should equal the sum of the corresponding value for each
+         of the following keys present:
+             1 - Home
+             2 - Back
+             4 - Menu
+             8 - Assistant (search)
+            16 - App switch
+            32 - Camera
+            64 - Volume rocker
+         For example, a device with Home, Back and Menu keys would set this
+         config to 7. -->
+    <integer name="config_deviceHardwareWakeKeys">64</integer>
 
     <bool name="config_intrusiveBatteryLed">true</bool>
 
