--- a/YUSettings/res/values/shit_strings.xml
+++ b/YUSettings/res/values/shit_strings.xml
@@ -14,15 +14,12 @@
      limitations under the License.
 -->
 <resources>
-    <string name="app_name">XiaomiShit</string>
-    <string name="advanced_settings">Xiaomi Add-on</string>
+    <string name="app_name">YUSettings</string>
+    <string name="advanced_settings">YU Settings</string>
     <string name="advanced_settings_summary">Advanced</string> 
     <string name="category_system">System</string>
     <string name="vib_strength_title_head">Vibration strength</string>
-
-    <string name="display_title">Display</string>
-    <string name="device_doze_title">Ambient display</string>
-
+	<string name="display_title">Display</string>
     <!-- s2s -->
     <string name="s2s_title">Sweep to sleep</string>
     <string name="s2s_vib_strength_title_head">Sweep2sleep vibration</string>
