--- a/XiaomiParts/res/xml/main.xml
+++ b/XiaomiParts/res/xml/main.xml
@@ -51,4 +51,13 @@
             android:persistent="false" />
     </PreferenceCategory>
 
+    <PreferenceCategory
+        android:title="@string/sound_title">
+        <PreferenceScreen
+            android:key="sound_control"
+            android:fragment="com.mdroid.settings.device.sound.SoundControlSettings"
+            android:summary="@string/sound_control_summary"
+            android:title="@string/sound_control_title" />
+    </PreferenceCategory>
+
 </PreferenceScreen>
